# meta-env-hackathon-final

./: .gitignore  .openenvignore  Dockerfile  PROGRESS.md  README.md  __init__.py  app.py  baseline_transcript.txt  blog.md  client.py  district_accord_selfplay.ipynb  district_accord_training.ipynb  models.py  openenv.yaml  pyproject.toml  train_grpo.py  train_hf.py
district_accord/: __init__.py  env.py
district_accord/core/: coalition.py  crisis.py  district.py  negotiation.py  trust.py
district_accord/engine/: __init__.py  event_bus.py  reward.py  state_tracker.py  turn_manager.py
district_accord/policy/: __init__.py  runner.py  self_play.py
district_accord/server/: __init__.py  app.py
district_accord/spaces/: __init__.py  action.py  action_parser.py  observation.py
district_accord/utils/: __init__.py  config.py  types.py
examples/: diagnostic.py  episode_trace.py  exploit_tests.py  run_episode.py  run_self_play.py
outputs/: baseline_results.json
server/: app.py
tests/: __init__.py  test_audit.py  test_crisis.py  test_district.py  test_env.py  test_phase2.py  test_phase3_coalition.py  test_phase3_integration.py  test_phase3_negotiation.py  test_phase3_trust.py  test_phase4_reward.py  test_phase5_engine.py  test_phase6_training.py
