# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-district_accord"
version = "0.1.0"
description = "District Accord Multi-Agent RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "numpy>=1.19.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables: uv run --project . server
server = "district_accord.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["district_accord", "district_accord.core", "district_accord.engine", "district_accord.policy", "district_accord.spaces", "district_accord.utils", "district_accord.server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["district_accord"]
omit = ["tests/*", "examples/*"]
